# lc-3-vm

./: Cargo.toml  README.md
src/: lc3.rs  lib.rs  main.rs
src/io/: console.rs  mod.rs
src/io/platform/: mod.rs  unix.rs  windows.rs
src/test/: tests.rs
src/vm/: memory.rs  mod.rs  opcodes.rs  registers.rs
src/vm/instructions/: arithmetic.rs  branch.rs  load_store.rs  mod.rs  trap.rs  utils.rs
